tests/jtrrouter/errors/no_output/options.jtrrouter
--net-file=input_net.net.xml --route-files=input_flows.flows.xml
